# QOpenGLTesting

./: .gitignore  CMakeLists.txt
res/brain/: brain.glb  brain.gltf
shaders/Mix/: BlinnPhong.frag  blend.fs.glsl  main.fs.glsl  main.vs.glsl  peeling.frag  peeling.fs.glsl
shaders/dynamic/: blend.fs.glsl  blend.vs.glsl  main.fs.glsl  main.vs.glsl
shaders/triangle/: triangle.fs.glsl  triangle.gs.glsl  triangle.vs.glsl
src/: main.cpp
src/Cameras/: Freefly.cpp  Freefly.h  TrackBall.cpp  TrackBall.h
src/Objects/: Cube.cpp  Cube.h  Plane.cpp  Plane.h
src/Utilitaire/: BlinnPhongIlluminationModel.cpp  BlinnPhongIlluminationModel.h  DepthPeelingEffect.cpp  DepthPeelingEffect.h  DynamicShaderBuilder.cpp  DynamicShaderBuilder.h  IShaderModule.h  ShaderManager.cpp  ShaderManager.h  gltfLoader.cpp  gltfLoader.h
src/Widgets/: CameraType.h  MixWidget.cpp  MixWidget.h  ShaderWidget.cpp  ShaderWidget.h  Testgltf.cpp  Testgltf.h  TriangleWidget.cpp  TriangleWidget.h
